Attempting to fix button transparency bug on mobile (yet again)

--- a/public/styles.css
+++ b/public/styles.css
@@ -272,10 +272,10 @@ video, #face {
   display: inline-flex;
   justify-content: center;
   text-align: center!important;
-  background-color: rgba(0,0,0,0);
+  background: transparent;
   border: 3px solid #343a40!important;
   border-radius: 20px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); */
   margin: 0 2% 0 2%;
 
 }
